# oci-genai-chatbot

./: .env.example  INTEGRATION_SUMMARY.md  README.md  demo.py  demo_codex.py  main.py  pyproject.toml  run_streamlit.py  test_codex_cli.py  test_setup.py  test_streaming.py  test_streaming_simple.py
src/oci_genai_chatbot/: __init__.py  cli.py  codex_cli.py  litellm_client.py  streamlit_app.py
