[project]
name = "oci-genai-chatbot"
version = "0.1.0"
description = "Sample chatbot application demonstrating OCI GenAI integration with LiteLLM"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "streamlit>=1.28.0",
    "oci>=2.154.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "litellm @ git+https://github.com/djvolz/litellm.git",
]

[project.scripts]
chatbot-cli = "oci_genai_chatbot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
